--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <div id="window3">
         <h1>이런 것들을 만들어요!</h1>
-        <h3>자세한 메뉴가 궁금하신 분들은 <a href="menu.jpeg" target="_blank">여기</a>를 봐주세요!</h3>
+        <h3>자세한 메뉴가 궁금하신 분들은 <a href="menuint.jpeg" target="_blank">여기</a>를 봐주세요!</h3>
         <div class="container">
           <div class="hobby">
             <img class="hobby_img" src="01.png" alt="">
