--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <a href="http://pf.kakao.com/_xdBxoLxj" target="_blank">
             <img src="kakao-talk.png" alt="">
           </a>
-          <a href="http://pf.kakao.com/_xdBxoLxj" target="_blank">
+          <a href="https://naver.me/GaT3QNAq" target="_blank">
             <img src="map.png" alt="">
           </a>
           <a href="https://baemin.me/3c_TpzMDY" target="_blank">
